refactor: Update file path handling to use Path.of for better readability and consistency